[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/test_art/cube.png" type="Texture" id=1]
[ext_resource path="res://Entities/Objects/Pushables/SokobanCubeKinematic.gd" type="Script" id=2]
[ext_resource path="res://assets/test_art/cube-white.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 47.0

[node name="SokobanCubeKinematic" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.799999, -16 )
texture = ExtResource( 1 )

[node name="SpriteWhiteCube" type="Sprite" parent="."]
visible = false
position = Vector2( -0.799999, -16 )
texture = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.799999, -16 )
polygon = PoolVector2Array( 1, 32, -32, 16, 0, 0, 32, 16 )

[node name="PlayerPushRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerPushRadius"]
scale = Vector2( 1, 0.67 )
shape = SubResource( 1 )

[node name="PollingTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="PlayerPushRadius" to="." method="_on_PlayerPushRadius_body_entered"]
[connection signal="body_exited" from="PlayerPushRadius" to="." method="_on_PlayerPushRadius_body_exited"]
[connection signal="timeout" from="PollingTimer" to="." method="_on_PollingTimer_timeout"]
